...
        completions."
    </string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="create_account">Criar Conta</string>
    <string name="adress">Endereço</string>
    <string name="cep">CEP</string>
    <string name="city">Cidade</string>
    <string name="complement">Complemento</string>
    <string name="district">Bairro</string>
    <string name="number">Número</string>
    <string name="state">Estado</string>
    <string name="no_account_yet_create_one">Ainda não tem uma conta? Cadastre-se</string>
</resources>

