<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="br.ufsm.projetosoftware.appdoacao.SearchDonationActivity"
    android:weightSum="1">

    <Spinner
        android:id="@+id/SpBuscaTipo"
        android:layout_width="match_parent"
        android:layout_height="38dp">
    </Spinner>

    <Spinner
        android:id="@+id/SpBuscaCategoria"
        android:layout_width="match_parent"
        android:layout_height="38dp">
    </Spinner>

    <EditText
        android:id="@+id/EtBusca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="O que você deseja buscar?"/>

    <Button
        android:id="@+id/BtBusca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Buscar" />

    <ListView
        android:id="@+id/ListBusca"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>
