...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btSearchDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Procurar Doação"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btNewDonation" />

...
